@@ -1,2 +1,2 @@
 config.php
-error.log
+*.log
